--- a/Sources/masters/NTSomic-Regular.ufo/fontinfo.plist
+++ b/Sources/masters/NTSomic-Regular.ufo/fontinfo.plist
@@ -42,7 +42,7 @@
   </dict>
   </array>
   <key>openTypeHeadCreated</key>
-  <string>2023/02/14 08:43:38</string>
+  <string>2023/02/20 12:56:36</string>
   <key>openTypeHeadFlags</key>
   <array>
   </array>
@@ -62,8 +62,59 @@
   <string>NT Somic</string>
   <key>openTypeNamePreferredSubfamilyName</key>
   <string>Regular</string>
+  <key>openTypeNameRecords</key>
+  <array>
+  <dict>
+    <key>nameID</key>
+    <integer>256</integer>
+    <key>platformID</key>
+    <integer>1</integer>
+    <key>encodingID</key>
+    <integer>0</integer>
+    <key>languageID</key>
+    <integer>0</integer>
+    <key>string</key>
+    <string>Alt a</string>
+  </dict>
+  <dict>
+    <key>nameID</key>
+    <integer>256</integer>
+    <key>platformID</key>
+    <integer>3</integer>
+    <key>encodingID</key>
+    <integer>1</integer>
+    <key>languageID</key>
+    <integer>1033</integer>
+    <key>string</key>
+    <string>Alt a</string>
+  </dict>
+  <dict>
+    <key>nameID</key>
+    <integer>257</integer>
+    <key>platformID</key>
+    <integer>1</integer>
+    <key>encodingID</key>
+    <integer>0</integer>
+    <key>languageID</key>
+    <integer>0</integer>
+    <key>string</key>
+    <string>Alt g</string>
+  </dict>
+  <dict>
+    <key>nameID</key>
+    <integer>257</integer>
+    <key>platformID</key>
+    <integer>3</integer>
+    <key>encodingID</key>
+    <integer>1</integer>
+    <key>languageID</key>
+    <integer>1033</integer>
+    <key>string</key>
+    <string>Alt g</string>
+  </dict>
+  </array>
   <key>openTypeNameVersion</key>
-  <string>Version 0.600</string>
+  <string>Version 0.610</string>
   <key>openTypeOS2Panose</key>
   <array>
     <integer>0</integer>
@@ -157,7 +208,7 @@
   <key>versionMajor</key>
   <integer>0</integer>
   <key>versionMinor</key>
-  <integer>600</integer>
+  <integer>610</integer>
   <key>xHeight</key>
   <integer>500</integer>
 </dict>
