--- a/Sources/masters/NTSomic-Bold.ufo/fontinfo.plist
+++ b/Sources/masters/NTSomic-Bold.ufo/fontinfo.plist
@@ -58,63 +58,19 @@
   <string>NT Type</string>
   <key>openTypeNameDesignerURL</key>
   <string>https://t.me/nnttttyyppee</string>
+  <key>openTypeNameLicense</key>
+  <string>Copyright 2022 The NT Somic Project Authors (https://github.com/nt-type/NT-Somic)
+
+This Font Software is licensed under the SIL Open Font License, Version 1.1.
+This license is copied below, and is also available with a FAQ at:
+https://scripts.sil.org/OFL
+</string>
   <key>openTypeNamePreferredFamilyName</key>
   <string>NT Somic</string>
   <key>openTypeNamePreferredSubfamilyName</key>
   <string>Bold</string>
-  <key>openTypeNameRecords</key>
-  <array>
-  <dict>
-    <key>nameID</key>
-    <integer>256</integer>
-    <key>platformID</key>
-    <integer>1</integer>
-    <key>encodingID</key>
-    <integer>0</integer>
-    <key>languageID</key>
-    <integer>0</integer>
-    <key>string</key>
-    <string>Alt a</string>
-  </dict>
-  <dict>
-    <key>nameID</key>
-    <integer>256</integer>
-    <key>platformID</key>
-    <integer>3</integer>
-    <key>encodingID</key>
-    <integer>1</integer>
-    <key>languageID</key>
-    <integer>1033</integer>
-    <key>string</key>
-    <string>Alt a</string>
-  </dict>
-  <dict>
-    <key>nameID</key>
-    <integer>257</integer>
-    <key>platformID</key>
-    <integer>1</integer>
-    <key>encodingID</key>
-    <integer>0</integer>
-    <key>languageID</key>
-    <integer>0</integer>
-    <key>string</key>
-    <string>Alt g</string>
-  </dict>
-  <dict>
-    <key>nameID</key>
-    <integer>257</integer>
-    <key>platformID</key>
-    <integer>3</integer>
-    <key>encodingID</key>
-    <integer>1</integer>
-    <key>languageID</key>
-    <integer>1033</integer>
-    <key>string</key>
-    <string>Alt g</string>
-  </dict>
-  </array>
   <key>openTypeNameVersion</key>
-  <string>Version 0.610</string>
+  <string>Version 0.62</string>
   <key>openTypeOS2Panose</key>
   <array>
     <integer>0</integer>
@@ -208,8 +164,8 @@
   <key>versionMajor</key>
   <integer>0</integer>
   <key>versionMinor</key>
-  <integer>610</integer>
+  <integer>62</integer>
   <key>xHeight</key>
-  <integer>500</integer>
+  <integer>794</integer>
 </dict>
 </plist>
