--- a/Sources/masters/NTSomic-Regular.ufo/glyphs.public.background/contents.plist
+++ b/Sources/masters/NTSomic-Regular.ufo/glyphs.public.background/contents.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+  <key>sterling</key>
+  <string>sterling.glif</string>
   <key>yukrcyr_yukrcyr</key>
   <string>yukrcyr_yukrcyr.glif</string>
 </dict>
