--- a/Sources/masters/NTSomic-Bold.ufo/fontinfo.plist
+++ b/Sources/masters/NTSomic-Bold.ufo/fontinfo.plist
@@ -7,7 +7,7 @@
   <key>capHeight</key>
   <integer>700</integer>
   <key>copyright</key>
-  <string>Copyright 2022 The NT Somic project</string>
+  <string>Copyright 2023 The NT Somic project</string>
   <key>descender</key>
   <integer>-200</integer>
   <key>familyName</key>
@@ -75,7 +75,7 @@ Ivan Kovalenko — best boy</string>
   <key>openTypeNameDesignerURL</key>
   <string>https://t.me/nnttttyyppee</string>
   <key>openTypeNameLicense</key>
-  <string>Copyright 2022 The NT Somic Project Authors (https://github.com/nnttttyyppee/NT-Somic)
+  <string>Copyright 2023 The NT Somic Project Authors (https://github.com/nnttttyyppee/NT-Somic)
 
 This Font Software is licensed under the SIL Open Font License, Version 1.1.
 This license is copied below, and is also available with a FAQ at:
@@ -87,6 +87,57 @@ https://scripts.sil.org/OFL
   <string>NT Somic</string>
   <key>openTypeNamePreferredSubfamilyName</key>
   <string>Bold</string>
+  <key>openTypeNameRecords</key>
+  <array>
+  <dict>
+    <key>nameID</key>
+    <integer>256</integer>
+    <key>platformID</key>
+    <integer>1</integer>
+    <key>encodingID</key>
+    <integer>0</integer>
+    <key>languageID</key>
+    <integer>0</integer>
+    <key>string</key>
+    <string>Alt a</string>
+  </dict>
+  <dict>
+    <key>nameID</key>
+    <integer>256</integer>
+    <key>platformID</key>
+    <integer>3</integer>
+    <key>encodingID</key>
+    <integer>1</integer>
+    <key>languageID</key>
+    <integer>1033</integer>
+    <key>string</key>
+    <string>Alt a</string>
+  </dict>
+  <dict>
+    <key>nameID</key>
+    <integer>257</integer>
+    <key>platformID</key>
+    <integer>1</integer>
+    <key>encodingID</key>
+    <integer>0</integer>
+    <key>languageID</key>
+    <integer>0</integer>
+    <key>string</key>
+    <string>Alt g</string>
+  </dict>
+  <dict>
+    <key>nameID</key>
+    <integer>257</integer>
+    <key>platformID</key>
+    <integer>3</integer>
+    <key>encodingID</key>
+    <integer>1</integer>
+    <key>languageID</key>
+    <integer>1033</integer>
+    <key>string</key>
+    <string>Alt g</string>
+  </dict>
+  </array>
   <key>openTypeNameVersion</key>
   <string>Version 0.7</string>
   <key>openTypeOS2Panose</key>
@@ -143,9 +194,9 @@ https://scripts.sil.org/OFL
   <key>openTypeOS2WidthClass</key>
   <integer>5</integer>
   <key>openTypeOS2WinAscent</key>
-  <integer>822</integer>
+  <integer>800</integer>
   <key>openTypeOS2WinDescent</key>
-  <integer>300</integer>
+  <integer>200</integer>
   <key>postscriptBlueFuzz</key>
   <integer>1</integer>
   <key>postscriptBlueScale</key>
