--- a/Sources/masters/NTSomic-Bold.ufo/glyphs.public.background/contents.plist
+++ b/Sources/masters/NTSomic-Bold.ufo/glyphs.public.background/contents.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+  <key>V</key>
+  <string>V_.glif</string>
   <key>yukrcyr_yukrcyr</key>
   <string>yukrcyr_yukrcyr.glif</string>
 </dict>
