--- a/Sources/masters/NTSomic-Regular.ufo/glyphs/contents.plist
+++ b/Sources/masters/NTSomic-Regular.ufo/glyphs/contents.plist
@@ -612,6 +612,8 @@
   <string>ntilde.glif</string>
   <key>numbersign</key>
   <string>numbersign.glif</string>
+  <key>numero</key>
+  <string>numero.glif</string>
   <key>o</key>
   <string>o.glif</string>
   <key>oacute</key>
