--- a/Sources/masters/NTSomic-Regular.ufo/lib.plist
+++ b/Sources/masters/NTSomic-Regular.ufo/lib.plist
@@ -414,6 +414,7 @@
     <string>nacute</string>
     <string>zdotaccent</string>
     <string>sacute</string>
+    <string>numero</string>
   </array>
 </dict>
 </plist>
